yaml/istio/istio_netflix/eureka-server.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: eurekaserver-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: eurekaserver
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: eurekaserver
        version: v1
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: eurekaserver-ctr
          image: metamagicglobal/sd-wk
          imagePullPolicy: Always
          ports:
          - containerPort: 7070
