yaml/istio/istio_netflix/product-service.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: productservicems-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: productservicems
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: productservicems
        version: v1
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: productservicems-ctr
          image: metamagicglobal/pdt-wk
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
