yaml/istio/istio_netflix/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eurekaserverservice
  namespace: shoppingportal
spec:
  selector: 
    name: eurekaserver
  ports:
  - protocol: TCP
    targetPort: 7070
    port: 80
    name: http
