yaml/istio/istio_netflix/shoppingportal-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /configserver
    route:
    - destination:
        host: configserverservice.shoppingportal.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /eureka-server
    route:
    - destination:
        host: eurekaserverservice.shoppingportal.svc.cluster.local
        port:
          number: 80
